# gophish-mcp

./: .gitignore  ARCHITECTURE.md  LICENSE  ORGANIZATION_SUMMARY.md  README.md  README_ESP.md  TEST_RESULTS.md  client.py  env.example  mcp-config-example.json  pyproject.toml  server.py  test.py
tests/: ORGANIZATION.md  README.md  __init__.py  demo_verbose.py  run_comprehensive_tests.py  run_tests.py
tests/comprehensive/: test_comprehensive.py
tests/individual/: __init__.py  test_advanced_features.py  test_connection.py  test_diagnosis.py
tests/scripts/: demo_verbose.py  test_readonly_tools.py
utils/: README.md  list_campaigns.py
